upload image: popup crop image alignment corrected.

--- a/src/components/Common/UploadPictures/uploadPictures.css
+++ b/src/components/Common/UploadPictures/uploadPictures.css
@@ -55,11 +55,12 @@
     right: 0;
     bottom: 0;
     width: 100vw;
-    height: 100vw;
-    background-color: rgba(0, 0, 0, 0.5);
+    /* height: 100vw; */
+    background-color: rgba(0, 0, 0, 0.8);
 }
 .imageCropContainer {
     position: absolute;
+    display: flex;
     width: 100%;
     height: 100%;
     min-height: 100px;
@@ -72,5 +73,8 @@
     margin: auto;
 }
 .ReactCrop {
-    width: 100%;
+    /* width: 100%; */
+    display: inline-flex;
+    align-items: center;
+    margin: 0 auto;
 }
